@@ -1,2 +1,2 @@
 call mvn clean package -Dmaven.test.skip=true
-java -jar ./target/wc-user-0.0.1-SNAPSHOT.jar
+java -jar -Xloggc:gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseG1GC -Xms1024m -Xmx1024m -Xss1024k -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./dump/ ./target/wc-user-0.0.1-SNAPSHOT.jar
